--- a/index.html
+++ b/index.html
@@ -40,6 +40,25 @@
       display: block;
     }
     .is-hidden { display: none; }
+    .modes {
+  display: flex;
+  gap: .5rem;
+  margin-bottom: .75rem;
+}
+
+.mode-button {
+  padding: .35rem .7rem;
+  border-radius: .4rem;
+  border: 1px solid #bbb;
+  background: #f8f8f8;
+  cursor: pointer;
+  font-size: .9rem;
+}
+
+.mode-button[aria-pressed="true"] {
+  background: #dbeafe;
+  border-color: #93c5fd;
+}
   </style>
 </head>
 <body>
