--- a/index.html
+++ b/index.html
@@ -592,32 +592,34 @@
 
   </main>
 
-  <script>
+<script>
   document.addEventListener('DOMContentLoaded', function () {
     const svg = document.querySelector('svg');
     const toolbar = document.querySelector('.toggles');
+    const modeButtons = Array.from(document.querySelectorAll('.mode-button'));
     if (!svg || !toolbar) {
       if (toolbar) toolbar.textContent = 'No SVG found on this page.';
       return;
     }
 
-    // Get all elements with id starting "Label_"
+    // All label groups with id starting "Label_"
     const labelEls = Array.from(svg.querySelectorAll('[id^="Label_"]'));
     if (!labelEls.length) {
       toolbar.textContent = 'No Label_* groups found in this SVG.';
       return;
     }
 
-    // --- NEW: randomize label order (Fisher–Yates shuffle) ---
+    // Randomize label order for buttons (Fisher–Yates)
     const shuffledLabels = [...labelEls];
     for (let i = shuffledLabels.length - 1; i > 0; i--) {
       const j = Math.floor(Math.random() * (i + 1));
       [shuffledLabels[i], shuffledLabels[j]] = [shuffledLabels[j], shuffledLabels[i]];
     }
 
+    let currentMode = 'study'; // 'study' or 'quiz'
     const buttons = [];
 
-    // Build buttons in randomized order
+    // Build label buttons
     shuffledLabels.forEach(el => {
       const id = el.id;
       const name = id.replace(/^Label_/, '').replace(/_/g, ' ');
@@ -639,25 +641,68 @@
     allButton.setAttribute('aria-pressed', 'false');
     toolbar.appendChild(allButton);
 
+    function setMode(mode) {
+      currentMode = mode;
+
+      // Update mode button visuals
+      modeButtons.forEach(b => {
+        const isActive = b.dataset.mode === mode;
+        b.setAttribute('aria-pressed', String(isActive));
+      });
+
+      if (mode === 'study') {
+        // Show all labels
+        labelEls.forEach(el => el.classList.remove('is-hidden'));
+        buttons.forEach(b => b.setAttribute('aria-pressed', 'true'));
+        allButton.setAttribute('aria-pressed', 'false');
+      } else if (mode === 'quiz') {
+        // Start with all labels hidden
+        labelEls.forEach(el => el.classList.add('is-hidden'));
+        buttons.forEach(b => b.setAttribute('aria-pressed', 'false'));
+        allButton.setAttribute('aria-pressed', 'false');
+      }
+    }
+
     function toggle(id) {
       const el = svg.querySelector('#' + CSS.escape(id));
       if (!el) return;
+
       const hidden = el.classList.toggle('is-hidden');
       const btn = buttons.find(b => b.dataset.target === id);
       if (btn) btn.setAttribute('aria-pressed', hidden ? 'false' : 'true');
     }
 
+    // Button behavior
     buttons.forEach(btn => {
-      btn.addEventListener('click', () => toggle(btn.dataset.target));
+      btn.addEventListener('click', () => {
+        // In both modes, clicking toggles that label on/off.
+        // In quiz mode, all labels start hidden; student reveals them as needed.
+        toggle(btn.dataset.target);
+      });
     });
 
+    // Toggle All behavior
     allButton.addEventListener('click', () => {
       const anyVisible = labelEls.some(el => !el.classList.contains('is-hidden'));
       labelEls.forEach(el => el.classList.toggle('is-hidden', anyVisible));
       buttons.forEach(b => b.setAttribute('aria-pressed', anyVisible ? 'false' : 'true'));
       allButton.setAttribute('aria-pressed', anyVisible ? 'false' : 'true');
     });
+
+    // Mode button handlers
+    modeButtons.forEach(b => {
+      b.addEventListener('click', () => {
+        const mode = b.dataset.mode;
+        if (mode && mode !== currentMode) {
+          setMode(mode);
+        }
+      });
+    });
+
+    // Initialize in Study mode (labels visible)
+    setMode('study');
   });
 </script>
+
 </body>
 </html>
