--- a/index.html
+++ b/index.html
@@ -610,74 +610,131 @@
 
   </main>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const svg = document.querySelector('svg');
-      const toolbar = document.querySelector('.toggles');
-      if (!svg || !toolbar) {
-        if (toolbar) toolbar.textContent = 'No SVG found on this page.';
-        return;
-      }
+<script>
+  document.addEventListener('DOMContentLoaded', async function () {
+    const svg = document.querySelector('svg');
+    const toolbar = document.querySelector('.toggles');
+    if (!svg || !toolbar) {
+      if (toolbar) toolbar.textContent = 'No SVG found on this page.';
+      return;
+    }
 
-      // Get all elements whose id starts with "Label_"
-      const labelEls = Array.from(svg.querySelectorAll('[id^="Label_"]'));
-      if (!labelEls.length) {
-        toolbar.textContent = 'No Label_* groups found in this SVG.';
-        return;
-      }
+    // --- CONFIG: your Apps Script URL + language ---
+    const SHEET_API_URL = 'YOUR_SHEET_WEB_APP_URL_HERE'; // <-- paste your URL
+    const LANG = 'en'; // change to 'es' etc., or later read from query params
 
-      // Randomize label order for buttons (Fisher–Yates shuffle)
-      const shuffledLabels = [...labelEls];
-      for (let i = shuffledLabels.length - 1; i > 0; i--) {
-        const j = Math.floor(Math.random() * (i + 1));
-        [shuffledLabels[i], shuffledLabels[j]] = [shuffledLabels[j], shuffledLabels[i]];
-      }
+    // 1) Collect label groups from SVG
+    const labelEls = Array.from(svg.querySelectorAll('[id^="Label_"]'));
+    if (!labelEls.length) {
+      toolbar.textContent = 'No Label_* groups found in this SVG.';
+      return;
+    }
 
-      const buttons = [];
-
-      // Build buttons in randomized order
-      shuffledLabels.forEach(el => {
-        const id = el.id;
-        const name = id.replace(/^Label_/, '').replace(/_/g, ' ');
-        const btn = document.createElement('button');
-        btn.type = 'button';
-        btn.dataset.target = id;
-        btn.setAttribute('aria-controls', id);
-        btn.setAttribute('aria-pressed', 'true');
-        btn.textContent = name;
-        toolbar.appendChild(btn);
-        buttons.push(btn);
+    // 2) Fetch label data from Google Sheets
+    let labelData = [];
+    try {
+      const res = await fetch(SHEET_API_URL + '?lang=' + encodeURIComponent(LANG), {
+        cache: 'no-store'
       });
+      if (!res.ok) throw new Error('HTTP ' + res.status);
+      labelData = await res.json();
+    } catch (err) {
+      console.error('Failed to load label data from Sheet:', err);
+      // Fallback: proceed with SVG labels as-is
+      labelData = [];
+    }
 
-      // Add "Toggle All"
-      const allButton = document.createElement('button');
-      allButton.type = 'button';
-      allButton.id = 'toggle-all';
-      allButton.textContent = 'Toggle All';
-      allButton.setAttribute('aria-pressed', 'false');
-      toolbar.appendChild(allButton);
-
-      function toggle(id) {
-        const el = svg.querySelector('#' + CSS.escape(id));
-        if (!el) return;
-        const hidden = el.classList.toggle('is-hidden');
-        const btn = buttons.find(b => b.dataset.target === id);
-        if (btn) btn.setAttribute('aria-pressed', hidden ? 'false' : 'true');
-      }
-
-      // Individual button behavior
-      buttons.forEach(btn => {
-        btn.addEventListener('click', () => toggle(btn.dataset.target));
-      });
-
-      // Toggle All behavior
-      allButton.addEventListener('click', () => {
-        const anyVisible = labelEls.some(el => !el.classList.contains('is-hidden'));
-        labelEls.forEach(el => el.classList.toggle('is-hidden', anyVisible));
-        buttons.forEach(b => b.setAttribute('aria-pressed', anyVisible ? 'false' : 'true'));
-        allButton.setAttribute('aria-pressed', anyVisible ? 'false' : 'true');
-      });
+    // Index data by id for quick lookup
+    const dataById = {};
+    labelData.forEach(item => {
+      if (item.id) dataById[item.id] = item;
     });
-  </script>
+
+    // 3) Apply text / tooltip / initial visibility from Sheet
+    labelEls.forEach(el => {
+      const info = dataById[el.id];
+      if (!info) return; // if no row, leave SVG as-is
+
+      // set text content (assumes a <text> element inside the group)
+      const textNode = el.querySelector('text');
+      if (textNode && info.text) {
+        textNode.textContent = info.text;
+      }
+
+      // set a title/tooltip on the group if provided
+      if (info.tooltip) {
+        el.setAttribute('aria-label', info.tooltip);
+        el.setAttribute('title', info.tooltip);
+      }
+
+      // set initial visibility
+      if (info.visible === false) {
+        el.classList.add('is-hidden');
+      } else {
+        el.classList.remove('is-hidden');
+      }
+    });
+
+    // 4) Randomize label order for buttons (Fisher–Yates)
+    const shuffledLabels = [...labelEls];
+    for (let i = shuffledLabels.length - 1; i > 0; i--) {
+      const j = Math.floor(Math.random() * (i + 1));
+      [shuffledLabels[i], shuffledLabels[j]] = [shuffledLabels[j], shuffledLabels[i]];
+    }
+
+    const buttons = [];
+
+    // 5) Build buttons in randomized order
+    shuffledLabels.forEach(el => {
+      const id = el.id;
+      const info = dataById[id];
+      const fallbackName = id.replace(/^Label_/, '').replace(/_/g, ' ');
+      const name = info && info.text ? info.text : fallbackName;
+
+      const btn = document.createElement('button');
+      btn.type = 'button';
+      btn.dataset.target = id;
+      btn.setAttribute('aria-controls', id);
+
+      // pressed state = visible state
+      const isHidden = el.classList.contains('is-hidden');
+      btn.setAttribute('aria-pressed', isHidden ? 'false' : 'true');
+      btn.textContent = name;
+
+      toolbar.appendChild(btn);
+      buttons.push(btn);
+    });
+
+    // 6) Add "Toggle All"
+    const allButton = document.createElement('button');
+    allButton.type = 'button';
+    allButton.id = 'toggle-all';
+    allButton.textContent = 'Toggle All';
+    allButton.setAttribute('aria-pressed', 'false');
+    toolbar.appendChild(allButton);
+
+    function toggle(id) {
+      const el = svg.querySelector('#' + CSS.escape(id));
+      if (!el) return;
+      const hidden = el.classList.toggle('is-hidden');
+      const btn = buttons.find(b => b.dataset.target === id);
+      if (btn) btn.setAttribute('aria-pressed', hidden ? 'false' : 'true');
+    }
+
+    // 7) Individual button behavior
+    buttons.forEach(btn => {
+      btn.addEventListener('click', () => toggle(btn.dataset.target));
+    });
+
+    // 8) Toggle All behavior
+    allButton.addEventListener('click', () => {
+      const anyVisible = labelEls.some(el => !el.classList.contains('is-hidden'));
+      labelEls.forEach(el => el.classList.toggle('is-hidden', anyVisible));
+      buttons.forEach(b => b.setAttribute('aria-pressed', anyVisible ? 'false' : 'true'));
+      allButton.setAttribute('aria-pressed', anyVisible ? 'false' : 'true');
+    });
+  });
+</script>
+
 </body>
 </html>
