Debug test with Web App Address

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       }
 
       // --- CONFIG: your Apps Script URL + language ---
-      const SHEET_API_URL = 'YOUR_SHEET_WEB_APP_URL_HERE'; // <-- paste your URL
+      const SHEET_API_URL = 'https://script.google.com/a/macros/macmillan.com/s/AKfycbx9Q497bGL6gSw4LWa2EoQ4GtDNfEnCwVsJvyxQggI2VAFQPU0FBR4LOFpfF4pm2mEE/exec'; // <-- paste your URL
       const LANG = 'en'; // change to 'es' later if needed
 
       // 1) Collect label groups from SVG
